<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/tv_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_game_over"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />

    <TextView
        android:id="@+id/tv_winner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_winner"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_game_over"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_winner_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_final_scores_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_final_scores"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_winner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tv_final_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_final_scores_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
